# flutter_paddle_ocr_ncnn

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  ppocrv5.cpp  ppocrv5ncnn.cpp
android/src/main/kotlin/com/iweka/ocr/: OcrCameraView.kt  OcrCameraViewFactory.kt  OcrPlugin.kt  PPOCRv5Ncnn.kt
android/src/test/kotlin/com/iweka/ocr/: OcrPluginTest.kt
example/: pubspec.yaml
example/android/: settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/iweka/ocr_example/: MainActivity.kt
example/assets/: PP_OCRv5_mobile_det.ncnn.param
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
lib/: ocr.dart  ocr_camera_view.dart  ocr_method_channel.dart  ocr_platform_interface.dart
